fixed cutoff bottom part of webpage

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -28,7 +28,7 @@ html {
 	border: 2px solid;
 	position: fixed;
 	right: 0%;
-	height: 620px;
+	height: auto;
 	max-height: 100%;
 	width: 300px;
 	margin-right: 10px;
@@ -49,7 +49,7 @@ html {
 	border: 2px solid;
 	position: fixed;
 	right: 0%;
-	height: 620px;
+	height: auto;
 	max-height: 100%;
 	width: 300px;
 	margin-right: 10px;
@@ -251,8 +251,8 @@ label {
 	display: inline-block;
 	width: 100%;
 	max-width: 1100px;
-	height: 620px;
-	border-radius: 25px;
+	height: auto;
+	border-radius: 15px;
 	background-color: black;
 	margin-left: 1.5% ;
 
